--- a/index.ipynb
+++ b/index.ipynb
@@ -207,23 +207,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'UPPER'",
+     "evalue": "'str' object has no attribute 'Upper'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-d4f03b4a24fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"Ceo\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUPPER\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'CEO'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'UPPER'"
+      "\u001b[0;32m<ipython-input-10-357d2930be9b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"Ceo\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mUpper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'CEO'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'Upper'"
      ]
     }
    ],
    "source": [
-    "\"Ceo\".UPPER() # 'CEO'"
+    "\"Ceo\".Upper() # 'CEO'"
    ]
   },
   {
