--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
    },
    "outputs": [],
    "source": [
-    "str'vandelay.com' # 'www.vandelay.com'"
+    "'www.'+'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
